rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_one_implementor.stderr
error: Expected at least two implementors.
 --> tests/ui/compile_fail/mutator_fails_if_one_implementor.rs:5:1
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `mutator` (in Nightly builds, run with -Z macro-backtrace for more info)
